[package]
name = "erc20"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
gstd.workspace = true
primitive-types.workspace = true
log.workspace = true
sails-macros.workspace = true
sails-rtl.workspace = true
sails-idl-meta.workspace = true
parity-scale-codec.workspace = true
scale-info.workspace = true

[dev-dependencies]
env_logger.workspace = true

[build-dependencies]
gwasm-builder.workspace = true
