[package]
name = "erc20"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
gstd.workspace = true
primitive-types.workspace = true
log.workspace = true
sails-macros.workspace = true
sails-rtl.workspace = true
parity-scale-codec.workspace = true
scale-info.workspace = true

[dev-dependencies]
env_logger.workspace = true
gtest.workspace = true

[build-dependencies]
gwasm-builder.workspace = true

[features]
debug = ["gstd/debug"]

